--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 
 
-    <section class="caixa" data-anime="right"><!--/Início seção saiba -->
+    <section class="caixa"><!--/Início seção saiba -->
       <div class="container">
         <div class="row">
           <div class="col-md-6 d-flex">
