--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 
 
-    <section class="caixa"><!--/Início seção saiba -->
+    <section class="caixa"><!--/Início seção 1° sessão bot-->
       <div class="container">
         <div class="row">
           <div class="col-md-6 d-flex">
@@ -153,7 +153,7 @@ Com o DinBot você automatiza este processo. E o melhor, com um custo fixo e ace
 
 
 
-    <section class="caixa home"><!--/Início seção juros -->
+    <section class="caixa home"><!--/Início seção bot -->
       <div class="container">
         <div class="row">
           <div class="col-md-6">
@@ -178,7 +178,7 @@ Com o DinBot você automatiza este processo. E o melhor, com um custo fixo e ace
           </div>
         </div>
       </div>
-    </section><!--/FIM seção juros -->
+    </section><!--/FIM seção bot -->
 
     <section class="caixa"><!--/Início seção recursos -->
       <div class="container">
